Verify customer code in various changes [RPII-68]

--- a/app/views/customers/_others_panel.html.haml
+++ b/app/views/customers/_others_panel.html.haml
@@ -7,6 +7,11 @@
   .panel-body{style: 'padding: 5px;'}
     .form-group.col-sm-12
       .col-sm-3
+        = f.label :code, translate_helper(:customer_code) 
+      .col-sm-9
+        = f.text_field :code, class: 'form-control'
+    .form-group.col-sm-12
+      .col-sm-3
         = f.label :message, translate_helper(:customer_message) 
       .col-sm-9
         = f.text_area :message, class: 'form-control'
