--- a/app/views/dispatchers/index.html.haml
+++ b/app/views/dispatchers/index.html.haml
@@ -250,11 +250,29 @@
       #{TripResult.reason_needed_result_ids}
     );
 
+
+    // if customer has code, then need to verify the code first
+    function handle_client_code_verification(customer_id, proceed_fn) {
+      var callback_fn = function(data) {
+        if (data.show_prompt) {
+          verify_client_code(data.code, "#{verify_code_customer_path('xxx')}".replace('xxx', customer_id), function() {
+            proceed_fn();
+          });
+        } else {
+          proceed_fn();
+        }
+      }
+      var url = "#{prompt_code_customer_path('xxx')}".replace('xxx', customer_id);
+      check_if_verify_client_code(url, callback_fn);
+    }
+
     // Handler for changing multiple selected trip results
       $(document).on('click', '.trip_result_option', function() {
         var trip_ids = [];
+        var customer_ids = [];
         $(this).parents('.panel').find('tbody input.trip-selected:checked').each(function() {
           trip_ids.push($(this).parents('tr').data('trip-id'));
+          customer_ids.push($(this).parents('tr').data('customer-id'));
         });
 
         if(trip_ids.length == 0) {
@@ -262,42 +280,51 @@
           return;
         }
 
-        trip_ids = trip_ids.join(','); 
         var resultCode = $(this).data('trip-result-id');
+        var callback_fn = function() {
+          trip_ids = trip_ids.join(','); 
 
-        if(trh.isReasonNeeded(resultCode)) { // If result is a code that needs to ask for reason...
-          trh.prepareModal(
-            "", // Set result reason input to blank
-            true, // Show result reason input
-            { // Prepare modal responses:
-              confirm: function() { // update the results and result reason and submit form
-                change_trips_trip_result(trip_ids, resultCode, trh.modalInput.val());
-              },
-              skip: function() { // just update results and submit the form
-                change_trips_trip_result(trip_ids, resultCode, null);
-              },
-              cancel: function() { // don't update results or submit form
-                return;
+          if(trh.isReasonNeeded(resultCode)) { // If result is a code that needs to ask for reason...
+            trh.prepareModal(
+              "", // Set result reason input to blank
+              true, // Show result reason input
+              { // Prepare modal responses:
+                confirm: function() { // update the results and result reason and submit form
+                  change_trips_trip_result(trip_ids, resultCode, trh.modalInput.val());
+                },
+                skip: function() { // just update results and submit the form
+                  change_trips_trip_result(trip_ids, resultCode, null);
+                },
+                cancel: function() { // don't update results or submit form
+                  return;
+                }
               }
-            }
-          )
-        } else { // If result is NOT a cancel code...
-          trh.prepareModal(
-            "", // Set result reason input to blank
-            false, // Don't show result reason input
-            { // Prepare modal responses:
-              confirm: function() {
-                change_trips_trip_result(trip_ids, resultCode, null);
-              },
-              cancel: function() {
-                return;
+            )
+          } else { // If result is NOT a cancel code...
+            trh.prepareModal(
+              "", // Set result reason input to blank
+              false, // Don't show result reason input
+              { // Prepare modal responses:
+                confirm: function() {
+                  change_trips_trip_result(trip_ids, resultCode, null);
+                },
+                cancel: function() {
+                  return;
+                }
               }
-            }
-          )
-        }
+            )
+          }
 
-        trh.showModal();
+          trh.showModal();
+        };
         
+        // only process 1 customer
+        var cancel_codes = #{TripResult.cancel_result_ids.to_json.html_safe};
+        if(cancel_codes.indexOf(resultCode) >= 0 && customer_ids.length > 0) { // canceling a trip
+          handle_client_code_verification(customer_ids[0], callback_fn);
+        } else {
+          callback_fn();
+        }
       });
 
     // run manifest panel expand/collapse
