Calculate point-to-point run distance [RPII-17]

--- a/app/views/dispatchers/index.html.haml
+++ b/app/views/dispatchers/index.html.haml
@@ -319,7 +319,7 @@
         };
         
         // only process 1 customer
-        var cancel_codes = #{TripResult.cancel_result_ids.to_json.html_safe};
+        var cancel_codes = #{TripResult.client_code_verify_result_ids.to_json.html_safe};
         if(cancel_codes.indexOf(resultCode) >= 0 && $.unique(customer_ids).length == 1) { // canceling a trip
           handle_client_code_verification(customer_ids[0], callback_fn);
         } else {
