--- a/app/views/runs/_form.html.haml
+++ b/app/views/runs/_form.html.haml
@@ -27,8 +27,9 @@
 
   .col-sm-12.col-md-6
     = render 'runs/date_time_panel', f: f, edit_mode: edit_mode
-    - if !@is_repeating_run && current_provider.run_tracking? && edit_mode == :show
-      = render 'runs/tracking_panel'
+    - if !@is_repeating_run && edit_mode == :show
+      = render 'runs/tracking_panel' if current_provider.run_tracking?
+      = render 'runs/distance_panel' if @run.run_distance.present?
   .col-sm-12.col-md-6
     = render 'repeating_runs/repetition_panel', f: f if @is_repeating_run
     = render 'runs/vehicle_panel', f: f 
