--- a/app/views/runs/_form_header.html.haml
+++ b/app/views/runs/_form_header.html.haml
@@ -11,6 +11,7 @@
         = f.submit translate_helper(:update), class: 'btn action-button'
         = link_to translate_helper(:cancel), (params[:from_dispatch] == 'true' ? dispatchers_path(run_id: params[:run_id]) : runs_path), class: "btn btn-default"
       - else
+        = link_to translate_helper(:complete), request_completion_run_path(@run), :remote => true, :disabled => !@run.completable?, :title => !@run.completable? ? "Incomplete trips or missing fields" : "", :class => "btn action-button run-completion-button" unless @run.complete?
         = link_to(translate_helper("delete"), @run, data: {:confirm => translate_helper("delete_run_confirm")}, :method => :delete, :id => 'run_delete', :class=>'btn action-button btn-danger') if !@run.new_record? && can?(:destroy, @run)
         = link_to translate_helper("edit"), edit_run_path(@run), :class=>'btn action-button' if !@run.new_record? && can?(:edit, @run)
         = link_to translate_helper(:back), (params[:from_dispatch] == 'true' ? dispatchers_path(run_id: params[:run_id]) : runs_path), class: "btn btn-default"
@@ -19,3 +20,6 @@
       - if @run.cancelled?
         %span.label.label-danger{style: 'font-size: small;'}
           Cancelled
+      - elsif @run.complete?
+        %span.label.label-info{style: 'font-size: small;'}
+          Completed
