--- a/app/views/runs/show.html.haml
+++ b/app/views/runs/show.html.haml
@@ -1,5 +1,4 @@
 = render 'form', edit_mode: :show 
-
 :javascript
-  $(".run_form :input").attr("disabled","disabled");
+  $(".run_form :input:not(.run-completion-button)").attr("disabled","disabled");
 
