(WIP) vehicle capacity tracking

--- a/app/views/providers/_vehicles.html.haml
+++ b/app/views/providers/_vehicles.html.haml
@@ -1,3 +1,13 @@
+- capacity_type_table = ProviderLookupTable.find_by_name('capacity_types')
+- if capacity_type_table
+  %h2.section-header= translate_helper("configure_provider_capacity_types")
+  = link_to translate_helper("provider_capacity_types_link_text"), provider_lookup_table_path(capacity_type_table), target: '_blank'
+  %hr
+
+%h2.section-header= translate_helper("configure_provider_vehicle_types")
+= link_to translate_helper("provider_vehicle_types_link_text"), vehicle_types_path, target: '_blank'
+%hr
+
 %h2.section-header= translate_helper("configure_provider_vehicle_requirement_templates")
 = link_to translate_helper("provider_vehicle_requirement_templates_link_text"), vehicle_requirement_templates_path(provider_id: current_provider_id), target: '_blank'
 %hr
