--- a/app/views/vehicle_capacities/index.html.haml
+++ b/app/views/vehicle_capacities/index.html.haml
@@ -4,12 +4,12 @@
     = link_to translate_helper(:vehicle_types), vehicle_types_path, class: "btn action-button"
     - if can? :create, VehicleCapacity
       = link_to translate_helper("new_vehicle_capacity_link_text"), polymorphic_path([@vehicle_type, VehicleCapacity], action: :new), class: "btn action-button", remote: true
-  %h1= @vehicle_type.capacity_type.try(:name)
+  %h1= @vehicle_type.try(:name)
   .col-sm-12{style: "padding-top: 10px;"}
     %table#capacities_table.table.table-striped.table-bordered
       %thead
         %tr
-          %th= translate_helper("vehicle_capacity_name")
+          %th= translate_helper("vehicle_capacity_type")
           %th= translate_helper("vehicle_capacity_capacity")
           %th
       %tbody
