--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,9 +1,6 @@
 = render 'shared/highlight_active_tab_js', is_primary_nav: false, tab_class: 'admin'
 
-- if !Rails.env.production? || ENV['HAS_RECURRING_TRIP_RUN_SCHDULING_BUTTON'] == 'true'
-  .col-sm-12
-    = link_to translate_helper("schedule_recurring_trips_runs"), schedule_recurring_path, class: 'btn action-button'
-%ul  
+%ul.col-sm-12  
   - if can? :manage, ApplicationSetting
     %li= link_to translate_helper("application_settings_link_text"), application_settings_path
   - if can? :manage, Provider
@@ -16,3 +13,9 @@
     %li= link_to translate_helper("lookup_tables_link_text"), lookup_tables_path
   - if can? :manage, Translation
     %li= link_to translate_helper("translation_engine_link_text"), translation_engine.translations_path
+
+- if !Rails.env.production? || ENV['HAS_RECURRING_TRIP_RUN_SCHDULING_BUTTON'] == 'true'
+  .col-sm-12
+    = link_to translate_helper("schedule_recurring_trips_runs"), schedule_recurring_path, class: 'btn action-button'
+
+
