--- a/app/views/dispatchers/index.html.haml
+++ b/app/views/dispatchers/index.html.haml
@@ -263,8 +263,12 @@
           proceed_fn();
         }
       }
-      var url = "#{prompt_code_customer_path('xxx')}".replace('xxx', customer_id);
-      check_if_verify_client_code(url, callback_fn);
+      if(customer_id) {
+        var url = "#{prompt_code_customer_path('xxx')}".replace('xxx', customer_id);
+        check_if_verify_client_code(url, callback_fn);
+      } else {
+        callback_fn({});
+      }
     }
 
     // Handler for changing multiple selected trip results
