--- a/app/views/reports/show.html.haml
+++ b/app/views/reports/show.html.haml
@@ -1,3 +1,4 @@
 = render "custom_report_header"
+- byebug
 .filter-form{style: 'padding-top: 10px;'}
   = render "reports/forms/#{@custom_report.name}"
