--- a/app/views/reports/forms/_show_trips_for_verification.html.erb
+++ b/app/views/reports/forms/_show_trips_for_verification.html.erb
@@ -4,6 +4,6 @@
     <%= translate_helper("through") %>  
     <%= f.date_select  :before_end_date, :order => [:month,:day,:year] rescue nil%>
     <%= f.select       :trip_display, TRIP_VERIFICATION_DISPLAY_OPTIONS %>
-    <%= f.submit translate_helper("show") %>
+    <%= f.submit translate_helper("run"), class: 'btn action-button' %>
   </fieldset>
 <% end %>
