--- a/app/views/reports/cab.html.erb
+++ b/app/views/reports/cab.html.erb
@@ -5,7 +5,7 @@
     <fieldset class="select-month">
       <p>
         <%= f.date_select  :start_date, :discard_day=>true rescue nil%>
-        <%= f.submit translate_helper("cab_report_submit") %>
+        <%= f.submit translate_helper("cab_report_submit"), class: 'btn action-button' %>
       </p>
     </fieldset>
   <% end %>
