--- a/app/views/reports/forms/_cctc_summary_report.html.erb
+++ b/app/views/reports/forms/_cctc_summary_report.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @trips_query, :url=>url_for(:action=>:cctc_summary_report), :html=>{:method=>:get} do |f| %>
   <fieldset>
     <%= f.date_select :start_date, :order => [:month,:year] rescue nil%>
-    <%= f.submit translate_helper("show") %>
+    <%= f.submit translate_helper("run"), class: 'btn action-button' %>
   </fieldset>
 <% end %>
