--- a/app/views/reports/forms/_daily_trips.html.erb
+++ b/app/views/reports/forms/_daily_trips.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @driver_query, :url=>url_for(:action=>:daily_trips), :html=>{:method=>:get} do |f| %>
   <fieldset>
     <%= f.date_select  :start_date rescue nil%>
-    <%= f.submit translate_helper("show") %>
+    <%= f.submit translate_helper("run"), class: 'btn action-button' %>
   </fieldset>
 <% end %>
