--- a/app/views/reports/forms/_export_trips_in_range.html.erb
+++ b/app/views/reports/forms/_export_trips_in_range.html.erb
@@ -3,6 +3,6 @@
     <%= f.date_select  :start_date, :order => [:month,:day,:year] rescue nil%>
     <%= translate_helper("through") %> 
     <%= f.date_select  :before_end_date, :order => [:month,:day,:year] rescue nil%>
-    <%= f.submit translate_helper("export") %>
+    <%= f.submit translate_helper("export"), class: 'btn action-button' %>
   </fieldset>
 <% end %>
