--- a/app/views/reports/forms/_provider_common_location_report.html.haml
+++ b/app/views/reports/forms/_provider_common_location_report.html.haml
@@ -1,4 +1,6 @@
 = form_for @query, :url=>url_for(:action=>:provider_common_location_report), :html=>{:method=>:get} do |f| 
   %fieldset
-    = f.collection_select :address_group_id, AddressGroup.all, :id, :name, include_blank: 'All'
-    = f.submit translate_helper("show")
+    = f.label :address_group_id, "Address Type:"
+    = f.collection_select :address_group_id, AddressGroup.all, :id, :name, include_blank: 'All Types'
+
+    = render 'reports/forms/v2_reports/common_controls', has_multiple_report_types: false, f: f
