--- a/app/views/reports/vehicles_monthly.html.erb
+++ b/app/views/reports/vehicles_monthly.html.erb
@@ -6,7 +6,7 @@
   <fieldset class="select-month">
     <p>
       <%= f.date_select  :start_date, :order => [:month,:year] rescue nil%>
-      <%= f.submit translate_helper("vehicle_operations_submit") %>
+      <%= f.submit translate_helper("vehicle_operations_submit"), class: 'btn action-button' %>
     </p>
   </fieldset>
 <% end %>
