--- a/app/views/reports/ineligible_customer_status_report/_table.html.haml
+++ b/app/views/reports/ineligible_customer_status_report/_table.html.haml
@@ -18,5 +18,5 @@
           %td
           %td= format_date(customer.inactivated_start_date)
           %td= format_date(customer.inactivated_end_date)
-        %td= customer.inactivated_reason
+        %td= customer.active_status_changed_reason
 
