--- a/app/views/reports/ineligible_customer_status_report/_csv.csv.haml
+++ b/app/views/reports/ineligible_customer_status_report/_csv.csv.haml
@@ -7,8 +7,8 @@
 - # Data
 - @customers.each do |customer|
   - if customer.permanent_inactivated?
-    = CSV.generate_line([customer.name, "Permanent", format_date(customer.inactivated_date), "", customer.inactivated_reason], {:row_sep => nil}).html_safe
+    = CSV.generate_line([customer.name, "Permanent", format_date(customer.inactivated_date), "", customer.active_status_changed_reason], {:row_sep => nil}).html_safe
   - else
-    = CSV.generate_line([customer.name, "", format_date(customer.inactivated_start_date), format_date(customer.inactivated_end_date), customer.inactivated_reason], {:row_sep => nil}).html_safe
+    = CSV.generate_line([customer.name, "", format_date(customer.inactivated_start_date), format_date(customer.inactivated_end_date), customer.active_status_changed_reason], {:row_sep => nil}).html_safe
 
   
