Customer Donation Report

--- a/app/views/reports/donations.html.erb
+++ b/app/views/reports/donations.html.erb
@@ -5,7 +5,7 @@
   <fieldset>
     <p>
       <%= f.date_select  :start_date, :discard_day=>true rescue nil%>
-      <%= f.submit translate_helper("donation_report_submit"), class: 'btn action-button' %>
+      <%= f.submit translate_helper("run"), class: 'btn action-button' %>
     </p>
   </fieldset>
 <% end %>
